
Wed Sep 29 17:43:41 PDT 1999
(Raster)

no debugging printf...

-------------------------------------------------------------------------------

Wed Sep 29 17:52:48 PDT 1999
(Raster)

and fix that event mask...

-------------------------------------------------------------------------------

Wed Sep 29 17:56:39 PDT 1999
(Raster)

update TOTO

-------------------------------------------------------------------------------

Wed Sep 29 18:13:37 PDT 1999
(Mandrake)

nuked useless variable + warning

-------------------------------------------------------------------------------

Thu Sep 30 09:44:14 PDT 1999
(Raster)

fix typo in icon settings dialog box

-------------------------------------------------------------------------------

Thu Sep 30 11:55:12 PDT 1999
(Raster)

dont clone iconfiied windows...

-------------------------------------------------------------------------------

Thu Sep 30 16:54:54 PDT 1999
(Raster)

change menus.cfg to use new menus scritps can generate

-------------------------------------------------------------------------------

Thu Sep 30 16:59:57 PDT 1999
(Raster)

handle file menus beign deleted form disk and delete them from the menu 
heirachy too

-------------------------------------------------------------------------------

Thu Sep 30 17:26:38 PDT 1999
(Raster)

try nto to segv if filemnus go missing... :)

-------------------------------------------------------------------------------

Thu Sep 30 18:54:13 PDT 1999
(Raster)

added pager group move patch and windowmatces pact for dialogs...

-------------------------------------------------------------------------------

Thu Sep 30 19:28:13 PDT 1999
(Raster)

add some mroe window matched to brushed metal to accoutn for dialogs
and have the dialog code and ewin match function work better...

-------------------------------------------------------------------------------

Thu Sep 30 20:43:54 PDT 1999
(Mandrake)

fixed a warning caused in borders.c due to lack of a cast